--- a/src/pages/components/calendar/style/calendar.scss
+++ b/src/pages/components/calendar/style/calendar.scss
@@ -26,7 +26,7 @@
     }
 
     &-item-wrapper {
-      $width: (1/7) * 100%;
+      $width: calc(100% / 7);
       @include flex(0, 0, $width);
       max-width: $width;
       margin: 5px 0;
