--- a/src/pages/weather/style/weather.scss
+++ b/src/pages/weather/style/weather.scss
@@ -9,8 +9,8 @@
     .flow {
         position: absolute;
         top: 220px;
-        left: '0';
-        right: '0';
+        left: 0;
+        right: 0;
     }
 
     .canvas {
