--- a/src/pages/weather/style/weather_header.scss
+++ b/src/pages/weather/style/weather_header.scss
@@ -6,6 +6,7 @@
 
   .label {
     font-size: 30px;
+
     .location {
       display: inline-block;
       width: 30px;
@@ -23,16 +24,23 @@
   }
 
   .right {
-    margin: 70px 0 0 90px;
+    margin: 70px 50px 0 30px;
   }
 
   .tip {
+    text-align: center;
+
     &-sm {
+      margin-top: 20px;
       font-size: 30px;
+      min-height: 30px;
+      line-height: 30px;
     }
+
     &-md {
       font-size: 50px;
     }
+
     &-lg {
       font-size: 160px;
     }
@@ -44,12 +52,34 @@
   background-image: linear-gradient(-180deg, #3bbcff, #4af4ff);
 }
 
-// 晴
-.weather_bg_00 {
-  background-image: linear-gradient(-90deg, #86c3ca, #b5e9e8);
+.night {
+  background-image: linear-gradient(-180deg,#313877,#44abec);
 }
 
-// 阴天
-.weather_bg_02 {
-  background-image: linear-gradient(-90deg, #86c3ca, #b5e9e8);
+.weather_bg_C1 {
+  background-image: linear-gradient(-180deg,#86c3ca,#b5e9e8);
+}
+
+.weather_bg_C3 {
+  background-image: linear-gradient(-180deg,#43697f,#abd2d7);
+}
+
+.weather_bg_C4 {
+  background-image: linear-gradient(-180deg,#67a1dc,#a8e0f7);
+}
+
+.weather_bg_C5 {
+  background-image: linear-gradient(-180deg,#81aedc,#a9def1);
+}
+
+.weather_bg_C6 {
+  background-image: linear-gradient(-180deg,#9b9b96,#c1c1bc);
+}
+
+.weather_bg_C7 {
+  background-image: linear-gradient(-180deg,#c09461,#eedfa1);
+}
+
+.weather_bg_C9 {
+  background-image: linear-gradient(-180deg,#50ade8,#7ae0fa);
 }
